[package]
name = "wasm-grep"
version = "0.1.4"
authors = ["Sven Sauleau <sven@sauleau.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
js-sys = "0.3.56"
grep-matcher = "0.1.5"
grep-regex = "0.1.9"
grep-searcher = "0.1.8"
regex = "1.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
